href replace fixed/player dealer page align fixed

--- a/css/dealer.css
+++ b/css/dealer.css
@@ -9,7 +9,7 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: center;
     gap: 30px;
 }
 
